[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/control_layer.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/panel_container.stylebox" type="StyleBox" id=2]
[ext_resource path="res://assets/themes/default_theme.theme" type="Theme" id=3]

[node name="ControlLayer" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 85.0
margin_bottom = 30.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ButtonsContainer"]
margin_right = 1675.0
margin_bottom = 24.0
mouse_filter = 2

[node name="SettingsButton" type="Button" parent="Control/ButtonsContainer/HBoxContainer"]
margin_right = 61.0
margin_bottom = 24.0
text = "Settings"

[node name="ResetButton" type="Button" parent="Control/ButtonsContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 111.0
margin_bottom = 24.0
text = "Reset"

[node name="ConsoleContainer" type="MarginContainer" parent="Control"]
anchor_top = 0.8
anchor_right = 0.3
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/ConsoleContainer"]
margin_right = 460.0
margin_bottom = 160.0
mouse_filter = 2
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.662745 )

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ConsoleContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ConsoleContainer/ColorRect/ScrollContainer"]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsContainer" type="PanelContainer" parent="Control"]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_right = 14.0
margin_bottom = 14.0
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PluginsContainer" type="ScrollContainer" parent="Control/SettingsContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1284.0
margin_bottom = 724.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsContainer/PluginsContainer"]
margin_right = 1274.0
margin_bottom = 714.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Control/SettingsContainer/PluginsContainer/VBoxContainer"]
margin_right = 1274.0
margin_bottom = 14.0
text = "Plugins"

[node name="SimpleChat" type="CheckButton" parent="Control/SettingsContainer/PluginsContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1274.0
margin_bottom = 66.0
text = "Simple Chat"

[node name="HScrollText" type="CheckButton" parent="Control/SettingsContainer/PluginsContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 1274.0
margin_bottom = 118.0
text = "H Scroll Text"

[node name="IncrementalGame" type="CheckButton" parent="Control/SettingsContainer/PluginsContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 1274.0
margin_bottom = 170.0
text = "Incremental Game"

[node name="ChatMinions" type="CheckButton" parent="Control/SettingsContainer/PluginsContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 1274.0
margin_bottom = 222.0
text = "Chat Minions"
